tests/typing/bad/testfile-unbound_method-1.scala
class A { var a: A = null; def m() { var x = A.m() } }
object Main { def main(args: Array[String]) { } }
